--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -60,7 +60,7 @@
 .MuiInputBase-formControl {
 	color: rgba(0, 0, 0, 0.8) !important;
 	font-size: 14px !important;
-	margin-bottom: 0.5rem !important;
+	margin-bottom: 1.5rem !important;
 }
 
 .MuiInputBase-input:nth-child(4) {
@@ -108,8 +108,30 @@
 
 .ContactForm__map {
 	width: 50%;
-	height: 40rem;
+	height: 100vh;
 }
 /* Media Quries */
+
+@media screen and (max-width: 960px) {
+	.Contact__Section {
+		display: block;
+		align-items: center;
+		background: #fff;
+	}
+	.Contact__form {
+		width: 100%;
+		background: #fff;
+	}
+	.ContactForm__map {
+		width: 100%;
+		height: 50vh;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	.contact {
+		width: 95%;
+	}
+}
 /* Contact Form Break Points */
 /* Contact Form Map Break Points*/
