--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,21 +1,28 @@
 .navbar {
 	background-color: transparent;
 	font-family: "Uchen", serif;
+	position: fixed;
+	right: 0;
+	left: 0;
+	z-index: 99;
 }
 .navbar__Wrapper {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	right: 0;
 	left: 0;
 	width: 90%;
 	margin: auto;
 }
+.navbar__active {
+	background: #f8f8f8;
+	opacity: 0.8;
+}
 
 .Logo {
-	margin-bottom: 0;
 	font-size: 2rem;
 	letter-spacing: 3px;
 }
