--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -28,9 +28,9 @@
 .headerLeftDiv__firstHeading {
 	color: #d5c455;
 	font-weight: 900;
-	font-family: "Raleway", sans-serif;
+	font-family: "Poppins", sans-serif;
 	margin-bottom: 0;
-	font-size: 18px;
+	font-size: 19px;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 }
